[FIX] web_enterprise: fix dark mode for property field type dropdown
In [1], dropdowns were updated and it impacted the properties field edition:
- the field type images in dark mode were not properly colored anymore (too
  dark).

This commit fixes the issue by adding a class on the field type selection
popover.

[1]: https://github.com/odoo/odoo/commit/7b7a2613901de20791d111a8efc8e98c226f39ad

task-3834506

closes odoo/enterprise#59649

X-original-commit: 982ef4cb9f3a07a71cf11b8b011dec6fa7e836c0
Related: odoo/odoo#159686

--- a/web_enterprise/static/src/views/fields/properties/properties_field.dark.scss
+++ b/web_enterprise/static/src/views/fields/properties/properties_field.dark.scss
@@ -1,8 +1,4 @@
 .o_field_property_definition_type {
-    .dropdown-item img {
-        -webkit-filter: invert(100%);
-        filter: invert(100%);
-    }
     .o_field_property_dropdown > img {
         -webkit-filter: invert(100%);
         filter: invert(100%);
@@ -13,5 +9,11 @@
         option {
             background-color: $border-color;
         }
+    }
+}
+.o_field_property_definition_type_popover.popover {
+    .dropdown-item img {
+        -webkit-filter: invert(100%);
+        filter: invert(100%);
     }
 }
